@@ -1,6 +1,6 @@
 Package: diffHic
-Version: 1.7.3
-Date: 2017-03-17
+Version: 1.7.4
+Date: 2017-03-20
 Title: Differential Analyis of Hi-C Data
 Author: Aaron Lun <alun@wehi.edu.au>
 Maintainer: Aaron Lun <alun@wehi.edu.au>
