@@ -6,61 +6,18 @@ prepPseudoPairs <- function(bam, param, file, dedup=TRUE, minq=NA, ichim=TRUE, c
 #
 # written by Aaron Lun
 # created 27 March 2015
-# last modified 16 March 2017
+# last modified 20 March 2017
 {
-	fragments <- param$fragments
-    if (length(fragments)) { 
-        stop("fragments should be empty for DNase-C experiments")
-    }
-    chrlens <- seqlengths(fragments)
-    if (length(chrlens)==0L) { 
-        stop("seqlengths were not specified in fragments")
-    }
-    chrs <- names(chrlens)
-    before.first <- as.list(integer(length(chrs))-1L) # to undo 1-indexing.
-    names(before.first) <- chrs
-
-	# Checking consistency between SAM chromosome lengths and the ones in the cuts.
-	chromosomes<-scanBamHeader(bam)[[1]]$targets
-    bam.chrs <- names(chromosomes)
-    m <- match(bam.chrs, chrs)
-    if (any(is.na(m))) { stop("missing chromosomes in cut site list") }
-	for (x in seq_along(bam.chrs)) {
-		if (chromosomes[x]!=chrlens[m[x]]) { 
-			stop("length of ", bam.chrs[x], " is not consistent between BAM file and fragments")
-		}
-	}
-
-	# Enforcing input types.
-	minq <- as.integer(minq)
-	ichim <- as.logical(ichim)
-	chim.span <- as.integer(chim.span)
-	dedup <- as.logical(dedup)
-    storage <- as.integer(storage)
-    if (storage <= 1L) { 
-        stop("'storage' must be a positive integer")
-    }
-
-    # Setting up the output directory.
-    if (is.null(output.dir)) { 
-        output.dir <- tempfile(tmpdir=".")
-    } else {
-        output.dir <- path.expand(output.dir)
-    }
-    if (!dir.create(output.dir)) {
-        stop("failed to create output directory")
-    }
-    on.exit({ unlink(output.dir, recursive=TRUE) })
-    prefix <- file.path(output.dir, "")
-
-    out <- .Call(cxx_report_hic_binned_pairs, chrlens, m-1L, path.expand(bam), prefix, storage, !ichim, chim.span, minq, dedup)
-    if (is.character(out)) { stop(out) }
-    final <- .process_output(out, file, chrs, before.first)
-    final$same.id <- NULL
-    return(final)
+    .Deprecated("preparePairs")
+    preparePairs(bam, param, file, dedup=dedup, minq=minq, ichim=ichim, chim.dist=chim.span, output.dir=output.dir, storage=storage)
 }
 
-segmentGenome <- function(bs) 
+segmentGenome <- function(bs) {
+    .Deprecated("emptyGenome")
+    emptyGenome(bs)
+}
+
+emptyGenome <- function(bs) 
 # Returns an empty 'fragments' but with filled-out seqlengths,
 # for use in assigning reads from a DNase Hi-C experiment.
 #
@@ -78,8 +35,5 @@ segmentGenome <- function(bs)
 		ref.len <- bs
 	}
     
-    nothing <- GRanges()
-    seqlevels(nothing) <- names(ref.len)
-	seqlengths(nothing) <- ref.len
-	return(nothing)
+    GRanges(seqlengths=ref.len)
 }
